--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 /* light theme */
 
 .light{
-    background-image: url("/images/bg-mobile-light.jpg");
+    background-image: url("images/bg-mobile-light.jpg");
     background-repeat: no-repeat;
 }
 
@@ -22,7 +22,7 @@ body{
 }
 
 .light .toggle-logo{
-    background-image: url("/images/icon-sun.svg");
+    background-image: url("images/icon-sun.svg");
     background-repeat: no-repeat;
     background-size: 25px;
 }
@@ -68,13 +68,13 @@ body{
 
 
 .dark{
-    background-image: url("/images/bg-mobile-dark.jpg");
+    background-image: url("images/bg-mobile-dark.jpg");
     background-repeat: no-repeat;
 }
 
 
 .dark .toggle-logo{
-    background-image: url("/images/icon-moon.svg");
+    background-image: url("images/icon-moon.svg");
     background-repeat: no-repeat;
     background-size: 25px;
 }
@@ -339,12 +339,12 @@ body{
     }
 
     .light{
-        background-image: url("/images/bg-desktop-light.jpg");
+        background-image: url("images/bg-desktop-light.jpg");
         background-repeat: no-repeat;
     }
 
     .dark{
-        background-image: url("/images/bg-desktop-dark.jpg");
+        background-image: url("images/bg-desktop-dark.jpg");
         background-repeat: no-repeat;
     }
 
